lifeguard-derive/tests/ui/compile_error_linked_empty_path.stderr
error: Linked path cannot be empty. Use format: `Entity1 -> Entity2` or `Entity1 -> Entity2 -> Entity3`
 --> tests/ui/compile_error_linked_empty_path.rs:9:5
  |
9 |     Comments,
  |     ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_linked_empty_path.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_linked_empty_path.rs`
